--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
