--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-error-boundary": "^3.1.4",
     "react-feather": "^2.0.9",
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.1.1",
